<resources>
    <string name="app_name">TravelPicker</string>
    <string name="title_country_detail">Country Detail</string>
    <string name="country">Country</string>
    <string name="yes">Yes</string>
    <string name="question_visit">Would you like to visit countries in the same continent?</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="rate_country">Rate this country</string>
    <string name="reset_north_america">Reset North America</string>
    <string name="reset_south_america">Reset South America</string>
    <string name="reset_europe">Reset Europe</string>
    <string name="reset_asia">Reset Asia</string>
    <string name="reset_africa">Reset Africa</string>
    <string name="view_on_wikipedia">View on Wikipedia</string>
    <string name="country_name">Country Name</string>
</resources>
